--- a/packages/cxl-lumo-styles/scss/themes/cxl-tabs-slider.scss
+++ b/packages/cxl-lumo-styles/scss/themes/cxl-tabs-slider.scss
@@ -26,6 +26,8 @@
   // Fading content doesn't work well on slider.
   --_lumo-tabs-overflow-mask-image: unset !important; /* stylelint-disable-line declaration-no-important */
 
+  overflow: auto;
+
   // Show horizontal scrollbar.
   &::-webkit-scrollbar {
     display: initial;
